--- a/css/Style.css
+++ b/css/Style.css
@@ -144,6 +144,11 @@ footer h2{
     max-width: 400px;
     max-height: 400px;
     }
+#sponsors i img:hover{
+    max-width: 430px;
+    max-height: 430px;
+filter:saturate(4)
+    }
 #sponsors{
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -210,5 +215,10 @@ justify-content: space-evenly;
     #sponsors{
         display: flex;
         flex-direction: column;
+    }
+    footer section i img:hover{
+        max-width: 60px;
+        max-height: 60px;
+        transition: all 2s;
     }
 }
