--- a/css/Style.css
+++ b/css/Style.css
@@ -1,4 +1,5 @@
 /*General*/
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 body{
 margin: 0;
 padding: 0;
@@ -21,8 +22,8 @@ h1{
 }
 nav{
     background-color: rgb(234, 248, 36);
-    position: relative;
-    bottom: 20px;
+    position:relative;
+    bottom: -30px;
     z-index:calc(3);
 }
 nav a{
@@ -76,10 +77,6 @@ footer section i img:hover{
     max-width: 80px;
     max-height: 80px;
     transition: all 2s;
-}
-.bajar{
-    position: relative;
-    top: 6.2px;
 }
 footer h2{
     background-color: gray;
@@ -156,10 +153,14 @@ filter:saturate(4)
     justify-items: center;
     align-items: center;
 }
+.bi-qr-code{
+    font-size: 40px;
+}
 
 /*Index*/
 #imagen_inicio{
     width: 100%;
+    height: 800px;
 }
 
 /*Contacto*/
@@ -175,6 +176,10 @@ justify-content: space-evenly;
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+.bajar{
+    position: relative;
+    top: 30px;
 }
 
 /*Conectarse*/
@@ -192,12 +197,6 @@ justify-content: space-evenly;
     h1{
         font-size: 70px;
         top: 30px;
-    }
-    nav{
-        bottom: 0px;
-    }
-    footer{
-        font-size: 50px;
     }
     .grilla_productos{
         display: grid;
@@ -220,5 +219,8 @@ justify-content: space-evenly;
         max-width: 60px;
         max-height: 60px;
         transition: all 2s;
+    }
+    #imagen_inicio{
+        height: 340px;
     }
 }
