--- a/css/Style.css
+++ b/css/Style.css
@@ -1,5 +1,103 @@
 /*General*/
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
+/*Productos*/
+.superclase, .productos ul, .filtros form {
+  display: flex;
+  flex-direction: column; }
+
+.grilla_productos {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: 540px 40px 800px;
+  grid-template-areas: "imagen imagen imagen"
+ "buscador buscador buscador"
+ "orden productos filtros"; }
+
+#imagen_productos_main {
+  max-width: 100%;
+  max-height: 500px;
+  grid-area: imagen; }
+
+.buscador {
+  grid-area: buscador;
+  text-align: center; }
+
+.orden {
+  grid-area: orden; }
+
+.productos {
+  grid-area: productos;
+  height: 780px; }
+  .productos ul {
+    list-style-type: none;
+    overflow: scroll;
+    height: 100%;
+    justify-content: space-evenly; }
+    .productos ul li {
+      display: flex;
+      flex-direction: row; }
+      .productos ul li img {
+        max-width: 180px; }
+
+.filtros {
+  grid-area: filtros; }
+  .filtros form {
+    background-color: orange;
+    align-items: center;
+    border-radius: 10px; }
+
+/*Contacto*/
+.contacto {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly; }
+
+.titulo_mapa {
+  text-align: center; }
+
+.formulario_contacto {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
+
+.bajar {
+  position: relative;
+  top: 30px; }
+
+/*Conectarse*/
+.formulario_conectarse {
+  text-align: center;
+  margin-bottom: 18%;
+  margin-top: 8%; }
+  .formulario_conectarse input:focus {
+    background-color: greenyellow; }
+
+.boton:active {
+  background-color: greenyellow; }
+
+/*Index*/
+#imagen_inicio {
+  width: 100%;
+  height: 800px; }
+
+/*Sponsors*/
+#sponsors {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 400px 400px;
+  justify-items: center;
+  align-items: center; }
+  #sponsors i img {
+    max-width: 400px;
+    max-height: 400px; }
+    #sponsors i img:hover {
+      max-width: 430px;
+      max-height: 430px;
+      filter: saturate(4); }
+
+.bi-qr-code {
+  font-size: 40px; }
+
 body {
   margin: 0;
   padding: 0; }
@@ -38,7 +136,7 @@ nav {
   .lista_menu li {
     display: inline-block;
     position: relative;
-    background-color: #f3e411;
+    background-color: #fac430;
     font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
     border-radius: 30px;
     color: greenyellow; }
@@ -80,101 +178,6 @@ footer {
 .ajustar_registrarse {
   margin-top: 230px; }
 
-/*Productos*/
-.grilla_productos {
-  display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
-  grid-template-rows: 540px 40px 800px;
-  grid-template-areas: "imagen imagen imagen" "buscador buscador buscador" "orden productos filtros"; }
-
-#imagen_productos_main {
-  max-width: 100%;
-  grid-area: imagen; }
-
-.buscador {
-  grid-area: buscador;
-  text-align: center; }
-
-.orden {
-  grid-area: orden; }
-
-.productos {
-  grid-area: productos;
-  height: 780px; }
-  .productos ul {
-    list-style-type: none;
-    overflow: scroll;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly; }
-    .productos ul li {
-      display: flex;
-      flex-direction: row; }
-      .productos ul li img {
-        max-width: 180px; }
-
-.filtros {
-  grid-area: filtros; }
-  .filtros form {
-    display: flex;
-    flex-direction: column;
-    background-color: orange;
-    align-items: center;
-    border-radius: 10px; }
-
-/*Sponsors*/
-#sponsors {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 400px 400px;
-  justify-items: center;
-  align-items: center; }
-  #sponsors i img {
-    max-width: 400px;
-    max-height: 400px; }
-    #sponsors i img:hover {
-      max-width: 430px;
-      max-height: 430px;
-      filter: saturate(4); }
-
-.bi-qr-code {
-  font-size: 40px; }
-
-/*Index*/
-#imagen_inicio {
-  width: 100%;
-  height: 800px; }
-
-/*Contacto*/
-.contacto {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly; }
-
-.titulo_mapa {
-  text-align: center; }
-
-.formulario_contacto {
-  display: flex;
-  flex-direction: column;
-  justify-content: center; }
-
-.bajar {
-  position: relative;
-  top: 30px; }
-
-/*Conectarse*/
-.formulario_conectarse {
-  text-align: center;
-  margin-bottom: 18%;
-  margin-top: 8%; }
-  .formulario_conectarse input:focus {
-    background-color: greenyellow; }
-
-.boton:active {
-  background-color: greenyellow; }
-
 /*Media Queries*/
 @media only screen and (max-width: 600px) {
   header {
@@ -186,7 +189,10 @@ footer {
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 140px 40px 400px 400px;
-    grid-template-areas: "imagen imagen" "buscador buscador" "productos filtros" "nada orden"; }
+    grid-template-areas: "imagen imagen"
+ "buscador buscador"
+ "productos filtros"
+ "nada orden"; }
   .contacto {
     flex-direction: column; }
   #sponsors {
