--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,8 +1,7 @@
 $main_color: white;
-$header_color: black;
+$header_color: rgb(0, 0, 0);
 $title_color: white;
 $nav_color: rgb(234, 248, 36);
-$nav_selector_color: rgb(243, 228, 17);
 $nav_texto_fuente: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 $footer_color: gray;
 $filtros_color: orange;
