--- a/css/Style.css
+++ b/css/Style.css
@@ -9,9 +9,7 @@
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
   grid-template-rows: 540px 40px 800px;
-  grid-template-areas: "imagen imagen imagen"
- "buscador buscador buscador"
- "orden productos filtros"; }
+  grid-template-areas: "imagen imagen imagen" "buscador buscador buscador" "orden productos filtros"; }
 
 #imagen_productos_main {
   max-width: 100%;
@@ -35,16 +33,28 @@
     justify-content: space-evenly; }
     .productos ul li {
       display: flex;
-      flex-direction: row; }
+      font-size: 20px;
+      font-family: 'Times New Roman', Times, serif; }
+      .productos ul li .precios {
+        font-size: 40px;
+        margin-top: 30px;
+        color: greenyellow; }
       .productos ul li img {
         max-width: 180px; }
 
 .filtros {
   grid-area: filtros; }
+  .filtros #titulo_filtros {
+    text-align: center; }
   .filtros form {
     background-color: orange;
     align-items: center;
-    border-radius: 10px; }
+    border-radius: 10px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    border: 1px #db8f00 solid;
+    font-size: large; }
+    .filtros form input {
+      border: 2px black solid; }
 
 /*Contacto*/
 .contacto {
@@ -136,7 +146,7 @@ nav {
   .lista_menu li {
     display: inline-block;
     position: relative;
-    background-color: #fac430;
+    background-color: #ffe819;
     font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
     border-radius: 30px;
     color: greenyellow; }
@@ -189,10 +199,7 @@ footer {
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 140px 40px 400px 400px;
-    grid-template-areas: "imagen imagen"
- "buscador buscador"
- "productos filtros"
- "nada orden"; }
+    grid-template-areas: "imagen imagen" "buscador buscador" "productos filtros" "nada orden"; }
   .contacto {
     flex-direction: column; }
   #sponsors {
@@ -207,4 +214,12 @@ footer {
   .lista_menu:hover {
     flex-direction: column;
     justify-content: center;
-    align-items: center; } }
+    align-items: center; }
+  .productos ul li {
+    font-size: 18px; }
+    .productos ul li .precios {
+      font-size: 28px; }
+    .productos ul li img {
+      max-width: 130px; }
+  nav ul li ul {
+    z-index: calc(8); } }
