--- a/css/Style.css
+++ b/css/Style.css
@@ -128,14 +128,17 @@ h1 {
   top: 30px;
   font-size: 100px; }
 
-nav {
-  background-color: #eaf824;
+.menu_desplegable input {
+  display: none; }
+
+.menu_desplegable nav {
+  background-color: yellow;
   position: relative;
   bottom: -30px;
   z-index: calc(3); }
-  nav a {
+  .menu_desplegable nav a {
     text-decoration: none; }
-    nav a:hover {
+    .menu_desplegable nav a:hover {
       font-size: 20px; }
 
 .lista_menu {
@@ -211,15 +214,56 @@ footer {
     transition: all 2s; }
   #imagen_inicio {
     height: 340px; }
-  .lista_menu:hover {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; }
   .productos ul li {
     font-size: 18px; }
     .productos ul li .precios {
       font-size: 28px; }
     .productos ul li img {
       max-width: 130px; }
-  nav ul li ul {
-    z-index: calc(8); } }
+  .superclase_menu_desplegable, .menu_desplegable input, .menu_desplegable .barras, .menu_desplegable .barras2 {
+    position: absolute;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    right: 0;
+    top: -40px;
+    width: 1060px;
+    height: 40px;
+    z-index: calc(2); }
+  .menu_desplegable {
+    color: white;
+    position: relative;
+    background: yellow;
+    min-height: 20px;
+    top: 30px; }
+    .menu_desplegable input {
+      display: flex;
+      opacity: 30; }
+      .menu_desplegable input:checked ~ nav {
+        display: block; }
+        .menu_desplegable input:checked ~ nav ul {
+          display: flex;
+          flex-direction: column; }
+          .menu_desplegable input:checked ~ nav ul li {
+            display: inline; }
+          .menu_desplegable input:checked ~ nav ul .mi_cuenta {
+            display: inline; }
+            .menu_desplegable input:checked ~ nav ul .mi_cuenta ul {
+              background-color: yellow;
+              display: inline; }
+      .menu_desplegable input:checked ~ .barras {
+        display: none; }
+      .menu_desplegable input:not(:checked) ~ .barras2 {
+        display: none; }
+    .menu_desplegable .barras {
+      font-size: 48px;
+      pointer-events: none; }
+    .menu_desplegable .barras2 {
+      font-size: 48px;
+      pointer-events: none; }
+    .menu_desplegable nav {
+      display: none; }
+  nav {
+    top: 10px; }
+    nav ul li ul {
+      z-index: calc(8); } }
