--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,7 @@
 $main_color: white;
 $header_color: rgb(0, 0, 0);
 $title_color: white;
-$nav_color: rgb(234, 248, 36);
+$nav_color: yellow;
 $nav_texto_fuente: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 $footer_color: gray;
 $filtros_color: orange;
