--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,19 +26,25 @@ h1{
     top: 30px;
     font-size: 100px;
 }
-nav{
-    background-color: $nav_color;
-    position:relative;
-    bottom: -30px;
-    z-index:calc(3);
+.menu_desplegable{
+    input{
+        display: none;
+    }
 
-    a{
-        text-decoration: none;
+    nav{
+        background-color: $nav_color;
+        position:relative;
+        bottom: -30px;
+        z-index:calc(3);
+
+        a{
+            text-decoration: none;
 
         &:hover{
             font-size: 20px;
         }
     }
+}
 }
 @mixin estilo_menu($nav_selector_color){
         display: inline-block;
@@ -143,12 +149,6 @@ background-color: white;
     #imagen_inicio{
         height: 340px;
     }
-    .lista_menu:hover{
-        flex-direction: column;
-        justify-content: center;
-        align-items:center;
-        }
-
 .productos{
 
     ul{
@@ -166,7 +166,74 @@ background-color: white;
         }
     }
 }
+.superclase_menu_desplegable{
+    position: absolute;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    right: 0;
+    top: -40px;
+    width: 1060px;
+    height: 40px;
+    z-index: calc(2);
+}
+.menu_desplegable{
+    color: white;
+    position: relative;
+    background: yellow;
+    min-height: 20px;
+    top: 30px;
+
+    input{
+        display:flex;
+        @extend .superclase_menu_desplegable;
+        opacity: 30;
+
+        &:checked ~ nav{
+            display: block;
+
+            ul{
+                display: flex;
+                flex-direction: column;
+
+                li{
+                    display: inline;
+                }
+
+                .mi_cuenta{
+                   display: inline;
+
+                   ul{
+                       background-color: yellow;
+                       display: inline;
+                   }
+                }
+            }
+        }
+        &:checked ~ .barras{
+            display: none;
+        }
+        &:not(:checked) ~ .barras2{
+            display: none;
+        }
+    }
+    .barras{
+        @extend .superclase_menu_desplegable;
+        font-size: 48px;
+        pointer-events: none;
+    }
+    .barras2{
+        @extend .superclase_menu_desplegable;
+        font-size: 48px;
+        pointer-events: none;
+    }
+    nav{
+        display: none;
+    }
+}
 nav{
+    top: 10px;
+
     ul{
         li{
             ul{
