--- a/css/Style.css
+++ b/css/Style.css
@@ -7,9 +7,11 @@
 
 .grilla_productos {
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-columns: 1fr 3fr 1fr;
   grid-template-rows: 540px 40px 800px;
-  grid-template-areas: "imagen imagen imagen" "buscador buscador buscador" "orden productos filtros"; }
+  grid-template-areas: "imagen imagen imagen"
+ "buscador buscador buscador"
+ "orden productos filtros"; }
 
 #imagen_productos_main {
   max-width: 100%;
@@ -28,7 +30,7 @@
   height: 780px; }
   .productos ul {
     list-style-type: none;
-    overflow: scroll;
+    overflow: auto;
     height: 100%;
     justify-content: space-evenly; }
     .productos ul li {
@@ -69,6 +71,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center; }
+  .formulario_contacto form textarea {
+    resize: none; }
 
 .bajar {
   position: relative;
@@ -108,6 +112,29 @@
 .bi-qr-code {
   font-size: 40px; }
 
+/*Registrarse*/
+.formulario_registrarse {
+  display: flex;
+  flex-direction: row; }
+  .formulario_registrarse section .mb-3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 800px;
+    position: relative;
+    left: 2px;
+    top: 30px; }
+  .formulario_registrarse section .btn, .formulario_registrarse section btn-primary {
+    position: relative;
+    left: 2px;
+    top: 30px; }
+  .formulario_registrarse section p {
+    font-size: 70px;
+    font-family: 'Times New Roman', Times, serif;
+    position: relative;
+    left: 0px;
+    top: 30px; }
+
 body {
   margin: 0;
   padding: 0; }
@@ -126,7 +153,8 @@ h1 {
   text-align: center;
   position: relative;
   top: 30px;
-  font-size: 100px; }
+  font-size: 100px;
+  font-family: 'Times New Roman', Times, serif; }
 
 .menu_desplegable input {
   display: none; }
@@ -192,7 +220,25 @@ footer {
   margin-top: 230px; }
 
 /*Media Queries*/
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1800px) {
+  .grilla_productos {
+    grid-template-rows: 430px 40px 800px; }
+  #imagen_productos_main {
+    width: 100%;
+    height: 400px; } }
+
+@media only screen and (max-width: 1400px) {
+  .formulario_registrarse {
+    flex-direction: column; }
+    .formulario_registrarse section .mb-3 {
+      width: 430px; }
+  .grilla_productos {
+    grid-template-rows: 320px 40px 800px; }
+  #imagen_productos_main {
+    width: 100%;
+    height: 300px; } }
+
+@media only screen and (max-width: 1040px) {
   header {
     height: 140px; }
   h1 {
@@ -202,9 +248,24 @@ footer {
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 140px 40px 400px 400px;
-    grid-template-areas: "imagen imagen" "buscador buscador" "productos filtros" "nada orden"; }
+    grid-template-areas: "imagen imagen"
+ "buscador buscador"
+ "productos filtros"
+ "nada orden"; }
+  #imagen_productos_main {
+    max-height: 158px;
+    width: 100%; }
   .contacto {
     flex-direction: column; }
+    .contacto .formulario_contacto {
+      display: flex;
+      flex-direction: row; }
+    .contacto section div {
+      display: flex;
+      flex-direction: row;
+      justify-content: center; }
+      .contacto section div iframe {
+        width: 500px; }
   #sponsors {
     display: flex;
     flex-direction: column; }
@@ -213,7 +274,7 @@ footer {
     max-height: 60px;
     transition: all 2s; }
   #imagen_inicio {
-    height: 340px; }
+    max-height: 340px; }
   .productos ul li {
     font-size: 18px; }
     .productos ul li .precios {
@@ -235,12 +296,19 @@ footer {
     position: relative;
     background: yellow;
     min-height: 20px;
-    top: 30px; }
+    top: 30px;
+    z-index: calc(130); }
+    .menu_desplegable:hover {
+      background: greenyellow; }
     .menu_desplegable input {
       display: flex;
-      opacity: 30; }
+      opacity: 0;
+      position: relative;
+      top: 0px; }
       .menu_desplegable input:checked ~ nav {
-        display: block; }
+        display: block;
+        position: relative;
+        top: -30px; }
         .menu_desplegable input:checked ~ nav ul {
           display: flex;
           flex-direction: column; }
@@ -266,4 +334,129 @@ footer {
   nav {
     top: 10px; }
     nav ul li ul {
-      z-index: calc(8); } }
+      z-index: calc(8); }
+  .buscador {
+    position: relative;
+    top: 20px; }
+  .productos {
+    height: 800px;
+    position: relative;
+    top: 30px; }
+  .formulario_conectarse {
+    position: relative;
+    top: 30px; }
+  .formulario_registrarse {
+    flex-direction: column; }
+    .formulario_registrarse section .mb-3 {
+      width: 430px; } }
+
+@media only screen and (max-width: 500px) {
+  header {
+    height: 130px; }
+  .superclase_menu_desplegable2, .menu_desplegable input, .menu_desplegable .barras, .menu_desplegable .barras2 {
+    position: absolute;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    right: 0;
+    top: -40px;
+    width: 1060px;
+    height: 40px;
+    z-index: calc(2); }
+  .menu_desplegable {
+    color: white;
+    position: relative;
+    background: yellow;
+    min-height: 20px;
+    top: 30px;
+    z-index: calc(130); }
+    .menu_desplegable input {
+      display: flex;
+      opacity: 0;
+      z-index: calc(130);
+      position: relative;
+      top: 0px;
+      height: 30px; }
+      .menu_desplegable input:checked ~ nav {
+        display: block;
+        position: relative;
+        top: -23px;
+        z-index: calc(230); }
+        .menu_desplegable input:checked ~ nav ul {
+          display: flex;
+          flex-direction: column; }
+          .menu_desplegable input:checked ~ nav ul li {
+            display: inline; }
+          .menu_desplegable input:checked ~ nav ul .mi_cuenta {
+            display: inline; }
+            .menu_desplegable input:checked ~ nav ul .mi_cuenta ul {
+              background-color: yellow;
+              display: inline; }
+      .menu_desplegable input:checked ~ .barras {
+        display: none; }
+      .menu_desplegable input:not(:checked) ~ .barras2 {
+        display: none; }
+    .menu_desplegable .barras {
+      font-size: 48px;
+      pointer-events: none; }
+    .menu_desplegable .barras2 {
+      font-size: 48px;
+      pointer-events: none; }
+    .menu_desplegable nav {
+      display: none; }
+  nav {
+    top: 10px; }
+    nav ul li ul {
+      z-index: calc(8); }
+  .productos ul li {
+    font-size: 15px; }
+    .productos ul li .precios {
+      font-size: 20px; }
+    .productos ul li img {
+      max-width: 130px; } }
+
+@media only screen and (max-width: 460px) {
+  .grilla_productos {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-rows: 140px 80px 800px 430px;
+    grid-template-areas: "imagen imagen imagen"
+ "buscador buscador orden"
+ "productos productos productos"
+ "filtros filtros filtros"; }
+  .orden {
+    position: relative;
+    top: 30px;
+    right: 30px; }
+  .buscador {
+    position: relative;
+    top: 30px; }
+  .productos ul {
+    width: 430px; }
+  .filtros {
+    position: relative;
+    top: 30px; } }
+
+@media only screen and (max-width: 430px) {
+  header h1 {
+    font-size: 60px; }
+  .productos ul {
+    width: 100%; }
+    .productos ul li img {
+      max-width: 130px; }
+  .formulario_registrarse section .mb-3 {
+    width: 230px; }
+  .formulario_registrarse section p {
+    font-size: 60px; }
+  #sponsors i img {
+    max-width: 300px; }
+    #sponsors i img:hover {
+      max-width: 320px; } }
+
+@media only screen and (max-width: 370px) {
+  header h1 {
+    font-size: 50px; }
+  .menu_desplegable {
+    top: 32px; }
+  .formulario_registrarse section p {
+    font-size: 50px; } }
