--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -11,6 +11,12 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+
+        form{
+            textarea{
+                resize: none;
+            }
+        }
     }
     .bajar{
         position: relative;
