--- a/css/Style.css
+++ b/css/Style.css
@@ -167,7 +167,7 @@ h1 {
   .menu_desplegable nav a {
     text-decoration: none; }
     .menu_desplegable nav a:hover {
-      font-size: 20px; }
+      font-size: 18px; }
 
 .lista_menu {
   list-style: none;
@@ -283,7 +283,6 @@ footer {
       max-width: 130px; }
   .superclase_menu_desplegable, .menu_desplegable input, .menu_desplegable .barras, .menu_desplegable .barras2 {
     position: absolute;
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
     right: 0;
@@ -299,7 +298,7 @@ footer {
     top: 30px;
     z-index: calc(130); }
     .menu_desplegable:hover {
-      background: greenyellow; }
+      background: #ffe819; }
     .menu_desplegable input {
       display: flex;
       opacity: 0;
@@ -355,7 +354,6 @@ footer {
     height: 130px; }
   .superclase_menu_desplegable2, .menu_desplegable input, .menu_desplegable .barras, .menu_desplegable .barras2 {
     position: absolute;
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
     right: 0;
