--- a/scss/style.scss
+++ b/scss/style.scss
@@ -224,7 +224,7 @@ background-color: white;
     padding: 0;
     right: 0;
     top: -40px;
-    width: 1060px;
+    width: 100%;
     height: 40px;
     z-index: calc(2);
 }
@@ -336,7 +336,7 @@ header{
     padding: 0;
     right: 0;
     top: -40px;
-    width: 1060px;
+    width: 100%;
     height: 40px;
     z-index: calc(2);
 }
