--- a/css/Style.css
+++ b/css/Style.css
@@ -290,7 +290,7 @@ footer {
     padding: 0;
     right: 0;
     top: -40px;
-    width: 1060px;
+    width: 100%;
     height: 40px;
     z-index: calc(2); }
   .menu_desplegable {
@@ -361,7 +361,7 @@ footer {
     padding: 0;
     right: 0;
     top: -40px;
-    width: 1060px;
+    width: 100%;
     height: 40px;
     z-index: calc(2); }
   .menu_desplegable {
